--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -10,13 +10,13 @@
     <uses-sdk android:minSdkVersion="9"
               android:targetSdkVersion="19" />
 
-    <application android:label="@string/app_name"
+    <application android:label="Cube"
                  android:icon="@drawable/sfml_logo"
                  android:hasCode="false"
                  android:allowBackup="true">
 
     <activity android:name="android.app.NativeActivity"
-              android:label="@string/app_name"
+              android:label="Cube"
               android:icon="@drawable/sfml_logo"
               android:configChanges="keyboardHidden|orientation|screenSize">
 
